--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
             <a href="#home" data-rel="back" style="margin-left: 10px; margin-top: 15px; margin-bottom: 15px; float: left;" class="ui-btn-left ui-btn ui-icon-home ui-btn-icon-notext ui-shadow ui-corner-all" data-role="button" role="button">Home</a>
         </div>
         <div data-role="content">
+            <div class="heading">
+                <div class="heading-left">
+                    <em>vamos nos conhecer</em>
+                    <h3>Cadastro completo!</h3>
+                </div>
+            </div>
             <form id="fulldataform">
                 Nome:
                 <input type="text" id="tfirstname" value="" />
