--- a/index.html
+++ b/index.html
@@ -310,35 +310,32 @@
         <div data-role="content">
             <div class="heading">
                 <div class="heading-left">
-                    <em>vamos falar do evento</em>
+                    <em>participe do Quiz, ganhe pontos e nos ajude a oferecer um serviço cada vez melhor!</em>
                     <h3>Quiz</h3>
                 </div>
             </div>
             <div class="decoration"></div>
             <div class="ui-field-contain">
-                <label for="standLulu">Stand:</label>
+                <label for="standLulu">Estande:</label>
                 <select name="standLulu" id="standLuluCombo">
                     <option value="0" selected="selected">Selecione...</option>
                 </select>
             </div>
             <div class="ui-field-contain">
                 <label>
-                    <input type="checkbox" id="question1" name="question1">Question 1
+                    <input type="checkbox" id="question1" name="question1">O estande está bem posicionado? 
                 </label>
                 <label>
-                    <input type="checkbox" id="question2" name="question2">Question 2
+                    <input type="checkbox" id="question2" name="question2">Você foi bem recebido? 
                 </label>
                 <label>
-                    <input type="checkbox" id="question3" name="question3">Question 3
+                    <input type="checkbox" id="question3" name="question3">Está clara a mensagem que a empresa quer passar? 
                 </label>
                 <label>
-                    <input type="checkbox" id="question4" name="question4">Question 4
+                    <input type="checkbox" id="question4" name="question4">Você indicaria este estande para alguém? 
                 </label>
                 <label>
-                    <input type="checkbox" id="question5" name="question5">Question 5
-                </label>
-                <label>
-                    <input type="checkbox" id="question6" name="question6">Question 6
+                    <input type="checkbox" id="question5" name="question5">A atuação da empresa no evento despertou o interesse para que você a conheça melhor? 
                 </label>
             </div>
             <p><a href="#" class="topcoat-button" id="savelulu" data-role="button" data-icon="star" data-transition="slide" data-theme="e">Salvar</a></p>
