--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 Qual a sua necessidade?
                 <input type="text" id="detail" value="" />
             </p>
-            <p><a id="okAgenda" data-role="button" href="#" data-icon="star" data-transition="slide" data-theme="a">Ok, Vamos agendar!</a></p>
+            <p><a id="okAgenda" class="topcoat-button" data-role="button" href="#" data-icon="star" data-transition="slide" data-theme="e">Ok, Vamos agendar!</a></p>
         </div>
     </div>
 
